root/static/css/writeoff-0.25.css
/* ... */
nav li:hover ul {
	left: 0;
}
nav li:hover a {
	color: #aaa;
}
nav li:hover a[href="#"],
nav li a:hover,
nav li.selected a {
	color: #fff;
}
nav li:hover ul li:hover a {
	color: #fff;
}

/*
 * Containers
 */

.events h1 {
	font-size: 1.5em;
}
.events h3 {
	font-size: 1.43em;
}
.events h4 {
	font-size: 1.25em;
}
.events td, 
.events th {
	padding: 4px;
	font-size: 1.2em;
	text-align: right;
}
.events .minutae td,
.events .minutae th {
	padding: 0px 4px;
	font-size: 1em;
}
.events .minutae td {
	text-align: left;
}
.events .minutae th {
	text-align: right;
	white-space: nowrap;
}

.results {
	display: table-cell;
	vertical-align: top;
}
.results p img {
	position: relative;
	top: 2px;
}
.results p {
	margin-bottom: 0.3em;
}
.results p + p {
	margin-top: 0;
}
.results h3 {
	margin-top: 2em;
}

ul.contents {
	list-style-type: none;
	padding-left: 0;
}
ul.contents li.h2 {
	text-indent: 2em;
}
ul.contents li.h3 {
	text-indent: 4em;
}
ul.contents li.h4 {
	text-indent: 6em;
}

/*
 * Tables
 */
  
table { 
	border-collapse: collapse;
	word-wrap: break-word;
	margin: 1em 0;
}
.t-outdent-deep {
	margin-left: -2em;
	margin-right: -2em;
}
.t-outdent {
	margin-left: -1em;
	margin-right: -1em;
}
.t-indent {
	margin-left: 1em;
	margin-right: 1em;
}
.t-indent-deep {
	margin-left: 2em;
	margin-right: 2em;
}
.t-center { 
	margin-left: auto; 
	margin-right: auto;
}
.left, 
td.left,
th.left, 
.left th,    
.left td { 
	text-align: left; 
}
.justify
td.justify,
th.justify, 
.justify th, 
.justify td { 
	text-align: justify; 
}
.right,
th.right, 
td.right,
.right th,   
.right td { 
	text-align: right; 
}
.center,
th.center, 
td.center, 
.center th,  
.center td { 
	text-align: center; 
}
table.no-overflow tr th {
	white-space: nowrap;
}
table.no-overflow tr td {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
}
table.no-overflow td.max-200 {
	max-width: 200px;
}
table.no-overflow td.max-175 {
	max-width: 175px;
}
table.no-overflow td.max-150 {
	max-width: 150px;
}
table.no-overflow td.max-125 {
	max-width: 125px;
}
table.no-overflow td.max-100 {
	max-width: 100px;
}
table.no-overflow td.max-75 {
	max-width: 75px;
}
table.no-overflow td.max-50 {
	max-width: 50px;
}

/* Plain */
table.plain td,
table.plain th {
	padding: 3px 7px;
}

/* Votes */
.votes th,
.votes td {
	min-width: 18px;
}

/* Slim */
.slim {
	background: #f8f8f8;
}
.slim td, 
.slim th {
	padding: 3px 7px;
	border-top: 2px dotted silver;
	border-bottom: 2px dotted silver;
}
.dotted-right { 
	border-right: 2px dotted silver; 
}
.dotted-left { 
	border-left: 2px dotted silver; 
}
.dotted-bottom { 
	border-bottom: 2px dotted silver; 
}
.dotted-top { 
	border-top: 2px dotted silver; 
}

/* Solid */
.solid tr.heading {
	font-size: 110%;
	font-variant: small-caps;
}
.solid td, 
.solid th {
	padding: 7px 11px;
}
.solid,
.solid tr.heading {
	border-bottom: 2px solid #a79645;
}
.solid tr.even {
	background: #f5f0e5;
}
.solid tr.odd {
	background: #ede4d4;
}

/* 
 * Prompts
 */

.prompt-container {
	width: 500px;
	margin-left: auto;
	margin-right: auto;
}
.promptbox, .or {
	text-align: center;
	padding: 5px;
}
.promptbox input {
	font-size: 1.4em;
	border-radius: 5px;
	background: #fff;
	width: 250px;
	white-space: pre-wrap;
}
.promptbox.tie input {
	font-size: .8em;
	width: 50px;
}
.or {
	width: 25px;
}
p.prompt {
	padding: 0.25em;
	margin: 0 0 -1px 0;
}

/*
 * GALLERY STYLES
 */

.story {
	clear: both;
	font-size: 1em;
	line-height: 1.8em;
	margin-bottom: 1.8em;
	text-align: justify;
}
.story hr {
	padding: 0;
	margin: 1.2em 0;
    border: none;
    border-top: medium double #333;
	border-bottom: medium solid transparent;
    color: #333;
	background: transparent;
    text-align: center;
}
.story hr:after {
    content: "§";
	position: relative;
	top: -0.7em;
    display: inline-block;
    font-size: 1.5em;
	line-height: normal;
    padding: 0 0.25em;
    background: white;
}
.story blockquote {
	padding: 1.8em;
	margin: 0;
	border: 1px solid gainsboro;
	border-radius: 4px 0 0 0;
	box-shadow: 2px 2px 2px grey;
}
.story blockquote,
.story blockquote hr:after {
	background: #f9f9f9;
}
figure {
	max-width: 230px;
	display: inline-block;
	vertical-align: top;
	text-align: center;
	margin: 0 25px 25px 0;
}
figure img {
	margin-bottom: 4px;
	border: 1px solid black;
	background: url(data:image/gif;base64,R0lGODlhFAAUAIAAAMDAwP///yH5BAEAAAEALAAAAAAUABQAAAImhI+pwe3vAJxQ0hssnnq/7jVgmJGfGaGiyoyh68GbjNGXTeEcGxQAOw==);
	
	-webkit-box-shadow: 2px 2px 2px black;
	-moz-box-shadow: 2px 2px 2px black;
	box-shadow: 2px 2px 2px black;
}

/*
 * Popups
 */

.status-msg, 
.error-msg {
	display: inline-block;
	padding: 0.7em 0.7em 0.5em 0.7em;
	white-space: nowrap;
}
.status-msg span.ui-icon, 
.error-msg span.ui-icon,
.popup-msg span.ui-icon {
	float: left;
	margin-right: .3em;
	position: relative;
	top: 2px;
}
.popup-msg {
	display: block;
	font-size: 1em;
	margin-top: 0;
	padding: 0.3em 0.7em;
}
.popup-msg span.ui-icon-alert {
	top: 3px;
}

/*
 * Dialogs
 */

a.dialog-fetcher:hover {
	cursor: pointer;
}
.dialog {
	min-width: 300px;
}

/*
 * Font-size chooser
 */

aside.font-size-chooser {
	padding: 0.1em 0.4em;
	float: right;
	
	-webkit-user-select: none;        
	-moz-user-select: none;
	-ms-user-select: none; 
	-o-user-select: none;
}
aside.font-size-chooser a:hover {
	cursor: pointer;
}
aside.font-size-chooser a {
	padding: 0 2px;
}
aside.font-size-chooser a.smaller {
	font-size: 0.5em;
}
aside.font-size-chooser a.default {
	font-size: 0.75em;
}
aside.font-size-chooser a.bigger {
	font-size: 1em;
}
aside.font-size-chooser.no-js {
	display: none;
}


/*
 * Layout classes
 */

.col {
	display: table-cell;
	vertical-align: top;
}
.col.inner,
.col.final {
	padding-left: 1.5em;
}
.br-eater {
	display: inline-block;
}
.br-eater,
.col.final,
form.light textarea,
.max-width,
.maxwidth {
	width: 100%;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-khtml-box-sizing: border-box;
}
/* ... */

